# mcp-jobboss2-server

./: .env.example  .gitignore  AGENTS.md  README.md  RUST_SWITCHOVER_PLAN.md  SECURITY_SUMMARY.md  SETUP.md  jobboss2_api_client.py  jobboss2_client.py  package-lock.json  package.json  server.py
rust/: Cargo.toml
rust/src/: bridge.rs  config.rs  main.rs  native_tools.rs
src/: index.ts  jobboss2-client.ts  schemas.ts
src/fastmcp/: registerTools.ts
src/mcp/: registerTools.ts
src/tools/: customers.ts  employees.ts  general.ts  generated.ts  inventory.ts  orders.ts  production.ts  quotes.ts  tool-definition.ts
tests/: client.test.ts  generated-tools.test.ts  mutation-policy.test.ts  register-tools.test.ts  server.test.ts
tests/smoke/: tier1.helpers.ts  tier1.smoke.test.ts
tools/: customers.py  employees.py  general.py  generated.py  inventory.py  orders.py  production.py  quotes.py
